实现创建房间，进入房间
实现创建房间，进入房间，搭建游戏内的基本桌面

--- a/mahjong_client/settings/project.json
+++ b/mahjong_client/settings/project.json
@@ -17,7 +17,7 @@
     "height": 640,
     "width": 960
   },
-  "start-scene": "current",
+  "start-scene": "ffe25c5e-fc0d-41f0-91b0-8a50083592ab",
   "use-customize-simulator": false,
   "use-project-simulator-setting": false
 }
